--- a/style_pc.css
+++ b/style_pc.css
@@ -1,4 +1,5 @@
 *{margin:0px; padding:0px; box-sizing: border-box;}
+
 body{
     background-color: coral;
 }
@@ -11,6 +12,7 @@ body{
     justify-content: space-evenly;
     align-items: center;
     padding: 0px 1rem;
+    color:white;
 }
 
 #titulo{
@@ -43,7 +45,7 @@ i{
 
 #box1{
     width: 100%;
-    height:760px;
+    height:820px;
     background-image: url(imagens/fundo.jpg);
     border-bottom: 1px solid black;
     box-shadow: 1px 1px 1px black;
@@ -145,14 +147,14 @@ h3{
     font-family: 'Indie Flower', cursive;
     letter-spacing: 2px;
     width: 20%;
-    margin: 1rem auto;
-    padding: 5px;
+    margin: 1.8rem auto;
+    padding: 1rem;
     border-radius: 4px;
     border: 1px solid black;
     font-size: 24px;
     box-shadow: 2px 2px 4px black;
     animation: botao .8s infinite  ;
-   animation-direction: alternate-reverse;
+    animation-direction: alternate-reverse;
 }
 
 a{ text-decoration: none;}
@@ -175,7 +177,7 @@ a{ text-decoration: none;}
     width: 100%;
     border: 1px solid;
     display: flex; 
-    justify-content:space-between;  
+    justify-content:space-evenly;  
     top: 0;
     height: max-content;
     padding: 1.6rem 1.5rem;
@@ -183,18 +185,19 @@ a{ text-decoration: none;}
     align-items: center;
 }
 #menu2{
-    margin-top: 3.4rem;
+    margin-top: 2.8rem;
     border: 1px solid;
     height: max-content;
     display: flex;
-    justify-content: end;
-    padding: 1rem 0px;
+    justify-content: center;
+    padding:1rem 0px;
     background-color: crimson;
 }
+
 ul > li{
- margin-top: 1rem;
- margin-bottom: 1rem;
+ margin: 2rem 0;
 }
+
 li{display:grid;}
 
 
@@ -202,11 +205,12 @@ li{display:grid;}
  background-color: crimson;
  padding: 1rem;
  border-radius: 50%;
- border:2px solid black
+ border:2px solid black;
+
 }
 
 #menu> div > h5{
-font-size: 16px;
+font-size: 21px;
 text-align: center;
 font-family: cursive;
 color:white;
@@ -214,20 +218,29 @@ color:white;
 
 #nav > ul > li > div{
     display: flex;
-    gap:.7rem;
+    gap:2rem;
     padding: 0px 1rem;
     align-items: center;
+    cursor: pointer;
 }
 
 #nav > ul > li > div > p{
     font-family: cursive;
     font-weight: 700;
     color:white;
+    font-size: 20px;
+}
+
+#nav > ul > li > div > p:hover{
+    color:black;
+}
+
+#nav > ul > li > div > img{
+    width: 50px;
 }
 
 #Menu-total{
     display: none;
-    transition: all;
 }
 
 #fecharmenu, #abrirmenu:hover{
@@ -239,8 +252,8 @@ color:white;
     height: max-content;
     border: 1px solid;
     display: flex;
-    gap: 1rem;
-    padding: 2.8rem 6px;
+    gap: 6rem;
+    padding: 5rem 6px;
     align-items: center;
     justify-content: center;
 }
@@ -261,6 +274,7 @@ color:white;
     background-size: contain;
     background-repeat: repeat-y;
     border: 2px solid black;
+    
 }
 
 #tela1{
@@ -276,17 +290,17 @@ color:white;
 }
 
 #descricao > button{
-  padding: 8px; 
+  padding: 1rem; 
   margin-bottom: 9px;
   border-radius: 5px;
   animation: botao .8s infinite  ;
   animation-direction: alternate-reverse;
-
+  cursor: pointer;
 }
 
 #tela-foto{
-    width: 210px;
-    height: 210px;
+    width: 370px;
+    height: 370px;
     background-image: url(imagens/lacos0.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -317,8 +331,8 @@ color:white;
     height: max-content;
     border: 1px solid;
     display: flex;
-    gap: 1rem;
-    padding: 2.8rem 6px;
+    gap: 6rem;
+    padding: 5rem 6px;
     align-items: center;
     justify-content: center;
 }
@@ -354,16 +368,17 @@ color:white;
 }
 
 #descricao2 > button{
-  padding: 8px; 
+  padding: 1rem; 
   margin-bottom: 9px;
   border-radius: 5px;
   animation: botao .8s infinite  ;
   animation-direction: alternate-reverse;
+  cursor: pointer;
 }
 
 #tela-foto2{
-    width: 210px;
-    height: 210px;
+    width: 370px;
+    height: 370px;
     background-image: url(imagens/tiara0.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -377,14 +392,14 @@ color:white;
         display: none;
         flex-direction: column;
         gap: 1rem;
-        padding: 1.8rem 6px;
+        padding: 5rem 6px;
         align-items: center;
         justify-content: center; 
         background-color: #e4d33a;
 }
 
 #redes-sociais > p{
-font-size: 20px;
+font-size: 28px;
 color:black;
 font-family: cursive;
 font-weight: 700;
@@ -392,8 +407,9 @@ font-weight: 700;
 
 #redes{
     display: flex;
-    gap:1.5rem;
+    gap:4rem;
     padding: 5rem 0;
+ 
 }
 
 #redes > div{
@@ -403,9 +419,10 @@ font-weight: 700;
     align-items: center;
     border: 1px solid black;
     box-shadow: 2px 2px 2px black;
-    gap:1rem;
+    gap:2.5rem;
     animation: botao .8s infinite  ;
     animation-direction: alternate-reverse;
+    cursor: pointer;
 }
 
 #whats{
@@ -414,7 +431,7 @@ font-weight: 700;
     border-radius: 16%;
     color:white;
    font-family: cursive;
-   font-size: 15px;
+   font-size: 22px;
 }
 
 #inst{
@@ -424,8 +441,12 @@ font-weight: 700;
      background-color:#f007cc;
      color:white;
     font-family: cursive;
-    font-size: 15px;
+    font-size: 22px;
 }
 
-
+.setas{
+    width: 64px;
+    height: 64px;
+    cursor: pointer;
+}
 
