--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
     background-color: coral;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 #head{
     display: flex;
     width: 100%;
@@ -145,6 +149,7 @@ h3{
 
 a{
     text-decoration: none;
+    color:white;
 }
 
 #img-Lacos{
