--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ html{
     scroll-behavior: smooth;
 }
 
+#email{
+    color:black;
+}
+
+a{
+    text-decoration: none;
+    color:white;
+}
+
 #head{
     display: flex;
     width: 100%;
@@ -15,6 +24,7 @@ html{
     justify-content: space-between;
     align-items: center;
     padding: 0px 1rem;
+    color:white;
 }
 
 #titulo{
@@ -147,10 +157,6 @@ h3{
     box-shadow: 2px 2px 4px black;
 }
 
-a{
-    text-decoration: none;
-    color:white;
-}
 
 #img-Lacos{
     background-image: url(imagens/lacos0.jpg);
