--- a/style_pc.css
+++ b/style_pc.css
@@ -11,7 +11,7 @@ html{
 #head{
     display: flex;
     width: 80%;
-    height: 85px;
+    height: 60px;
     background-color:coral;
     justify-content: space-evenly;
     align-items: center;
@@ -52,7 +52,7 @@ i{
 
 #box1{
     width: 80%;
-    height:820px;
+    height:860px;
     background-image: url(imagens/fundo.jpg);
     border: 1px solid black;
     padding: 1rem 0;
@@ -69,8 +69,8 @@ i{
 #part-fotos>div>img{
     border: 1px solid;
     box-shadow: 2px 2px 2px black;
-    width: 260px;
-    height: 260px;
+    width: 220px;
+    height: 220px;
 }
 
 #info{
@@ -93,7 +93,7 @@ i{
     text-align: center;
     color: brown;
     font-weight: 700;
-    font-size: 26px;
+    font-size: 23px;
 }
 
 #info-redes,#info-tiara,#info-lacos{
@@ -155,9 +155,9 @@ h3{
     color:white;
     font-family: 'Indie Flower', cursive;
     letter-spacing: 2px;
-    width: 20%;
+    width: 30%;
     margin: 1.8rem auto;
-    padding: 1rem;
+    padding: .4rem;
     border-radius: 4px;
     border: 1px solid black;
     font-size: 24px;
@@ -190,7 +190,7 @@ color:white}
     justify-content:space-evenly;  
     top: 0;
     height: max-content;
-    padding: 1rem 1.5rem;
+    padding: .6rem 1.5rem;
     background-color: white;
     align-items: center;
 
@@ -309,8 +309,8 @@ color:white;
 }
 
 #tela-foto{
-    width: 370px;
-    height: 370px;
+    width: 330px;
+    height: 330px;
     background-image: url(imagens/lacos0.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -388,8 +388,8 @@ color:white;
 }
 
 #tela-foto2{
-    width: 370px;
-    height: 370px;
+    width: 330px;
+    height: 330px;
     background-image: url(imagens/tiara0.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -431,7 +431,7 @@ font-weight: 700;
     align-items: center;
     border: 1px solid black;
     box-shadow: 2px 2px 2px black;
-    gap:2.5rem;
+    gap:2rem;
     animation: botao .8s infinite  ;
     animation-direction: alternate-reverse;
     cursor: pointer;
@@ -439,11 +439,11 @@ font-weight: 700;
 
 #whats{
     background-color: #11daa1;
-    padding: 1.2rem;
+    padding: 1rem;
     border-radius: 16%;
     color:white;
    font-family: cursive;
-   font-size: 22px;
+   font-size: 19px;
 }
 
 #inst{
@@ -453,12 +453,12 @@ font-weight: 700;
      background-color:#f007cc;
      color:white;
     font-family: cursive;
-    font-size: 22px;
+    font-size:19px;
 }
 
 .setas{
-    width: 64px;
-    height: 64px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
 }
 
