--- a/style_pc.css
+++ b/style_pc.css
@@ -138,9 +138,13 @@ h3{
 
 #texto2 > p{
     font-family:Georgia, 'Times New Roman', Times, serif;
-    padding: 0 3px;
+    padding: 0 7rem;
     color: white;
     line-height: 43px;
+    font-size: 25px;
+}
+
+#texto2 > h4{
     font-size: 25px;
 }
 
@@ -205,7 +209,7 @@ color:white}
 }
 
 ul > li{
- margin: 1.7rem 0;
+ margin: 1rem 0;
 }
 
 li{display:grid;}
