--- a/style.css
+++ b/style.css
@@ -7,9 +7,6 @@ html{
     scroll-behavior: smooth;
 }
 
-#email{
-    color:black;
-}
 
 a{
     text-decoration: none;
@@ -67,7 +64,7 @@ i{
 
 #part-fotos{
     display: flex;
-    justify-content:space-between;
+    justify-content:space-evenly;
     padding:1rem 10px;
     gap: 6px;
 }
@@ -143,14 +140,14 @@ h3{
     text-align: center;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: .5rem;
     background-color: brown;
     color:white;
     font-family: 'Indie Flower', cursive;
-    letter-spacing: 2px;
-    width: 80%;
+    letter-spacing: 1px;
+    width: 50%;
     margin: .4rem auto;
-    padding: 5px;
+    padding: 5px 1.5px;
     border-radius: 4px;
     border: 1px solid black;
     font-size: 18px;
@@ -443,10 +440,49 @@ font-weight: 700;
     flex-direction: colum;
 }
 
-
-
-
-@media onl screen and (min-device-width: 660px) and (max-device-width: 960px){
-    body {background: blue}
+#aviso{
+    display: none;
 }
 
+
+@media screen and (min-width:620px) and (max-width: 960px){
+    .whats{
+        display: flex;
+        border: 1px solid;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        gap: .5rem;
+        background-color: brown;
+        color:white;
+        font-family: 'Indie Flower', cursive;
+        letter-spacing: 1px;
+        width: 30%;
+        margin: .4rem auto;
+        padding: 5px 1.5px;
+        border-radius: 4px;
+        border: 1px solid black;
+        font-size: 18px;
+        box-shadow: 2px 2px 4px black;
+        animation: botao .8s infinite;
+        animation-direction: alternate-reverse;
+    }
+
+
+ }
+
+
+ @media screen and (max-width:380px){
+    #aviso{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 1rem 0;
+    }
+
+    section{
+      display: none;
+      opacity: 0;
+    }
+ }
