--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ h3{
 
 #texto2>p{
     font-family:Georgia, 'Times New Roman', Times, serif;
-    padding: 0 3px;
+    padding: 0 .8rem;
     color: white;
     line-height: 25px;
 }
@@ -472,13 +472,17 @@ font-weight: 700;
  }
 
 
- @media screen and (max-width:380px){
+ @media screen and (max-width:344px){
     #aviso{
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        padding: 1rem 0;
+        padding: 1rem .5rem;
+        background-color:darkorchid;
+        color:white;
+        border: 1px solid;
     }
 
     section{
