--- a/style_pc.css
+++ b/style_pc.css
@@ -83,6 +83,10 @@ i:hover{
     justify-content: space-evenly;
 }
 
+#info>div:hover{
+    cursor: pointer;
+}
+
 #info>div>img{
     background-color: white;
     padding: 12px; 
@@ -205,7 +209,6 @@ a:hover{
     padding: .6rem 1.5rem;
     background-color: white;
     align-items: center;
-
 }
 #menu2{
     margin-top: 2.8rem;
@@ -423,17 +426,19 @@ color:white;
 }
 
 #redes-sociais > p{
-font-size: 28px;
-color:black;
-font-family: cursive;
-font-weight: 700;
+    font-size: 28px;  
+    color:black;
+    font-family: cursive;
+    font-weight: 700;
 }
 
 #redes{
     display: flex;
+    width: 70%;
+    justify-content: space-evenly;
     gap:4rem;
-    padding: 5rem 0;
- 
+    padding: 0;
+    margin: 0;
 }
 
 #redes > div{
