--- a/style_pc.css
+++ b/style_pc.css
@@ -438,7 +438,7 @@ color:white;
     justify-content: space-evenly;
     gap:4rem;
     padding: 0;
-    margin: 0;
+    margin: 3rem 0;
 }
 
 #redes > div{
